--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,5 +1,5 @@
 ---
-import Picture from "astro/components/Picture.astro"
+import { Picture } from "astro:assets"
 const { title, image } = Astro.props
 ---
 
