--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -10,5 +10,45 @@
 	<body>
 		<!-- Decap CMS script -->
 		<script is:inline src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
+		<script is:inline>
+      var BlogPreview = createClass({
+        render: function () {
+          const data = this.props.entry.get("data").toJS();
+
+          const title = data.title;
+          const author = data.author;
+          const date = typeof data.date === "string" ? new Date(data.date) : data.date;
+          let formattedDate = "";
+          if (date) {
+            formattedDate = Intl.DateTimeFormat("en-US", {
+              month: "long",
+              day: "numeric",
+              year: "numeric",
+            }).format(date);
+          }
+          const coverImage = data.image;
+          const cover = this.props.getAsset(coverImage);
+
+          return h(
+            "div",
+            { className: "blog" },
+            h("h1", { className: "title" }, title),
+            h(
+              "div",
+              { className: "metadata" },
+              h("span", { className: "author" }, author),
+							h("span", { className: "dot"}),
+              h("span", { className: "date" }, formattedDate),
+            ),
+            h("img", { src: cover.toString(), className: "cover" }),
+						h("hr", { className: "divider" }),
+            h("div", { className: "markdown" }, this.props.widgetFor("body")),
+          );
+        },
+      });
+
+      CMS.registerPreviewTemplate("blog", BlogPreview);
+      CMS.registerPreviewStyle("/admin/styles.css");
+    </script>
 	</body>
 </html>
