--- a/src/styles/markdown.less
+++ b/src/styles/markdown.less
@@ -15,8 +15,10 @@
 		line-height: 1.5em;
 		margin-bottom: (16/16rem);
 		color: var(--headerColor);
+
 		&[id] {
-			scroll-margin-top: 8rem; /* adds margin top when scrolling down to a h2 header using a TOC link */
+			scroll-margin-top: 8rem;
+			/* adds margin top when scrolling down to a h2 header using a TOC link */
 		}
 	}
 
@@ -86,6 +88,7 @@
 @media only screen and (min-width: 0em) {
 	body.dark-mode {
 		#blog-content {
+
 			h1,
 			h2,
 			h3,
@@ -100,6 +103,7 @@
 				color: #f7f7f7;
 				opacity: 0.8;
 			}
+
 			a {
 				color: #9dafe5;
 			}
