--- a/src/components/FeaturedPost.astro
+++ b/src/components/FeaturedPost.astro
@@ -13,11 +13,19 @@ const featuredPosts = posts.filter((post) => post.data.isFeatured === true);
 	featuredPosts.map((post) => (
 		<a class="blog-sidebar_widget-link" href={`/blog/${post.id}`}>
 			<picture class="blog-sidebar_widget-image">
-				<Image src={post.data.image} alt={post.data.imageAlt} width="60" height="60" decoding="async" />
+				<Image
+					src={post.data.image}
+					alt={post.data.imageAlt}
+					width="60"
+					height="60"
+					decoding="async"
+				/>
 			</picture>
 			<div class="content-group">
 				<h4 class="blog-sidebar_widget-h4">{post.data.title}</h4>
-				<span class="blog-sidebar_widget-date">{formatDate(post.data.date)}</span>
+				<span class="blog-sidebar_widget-date">
+					{formatDate(post.data.date)}
+				</span>
 			</div>
 		</a>
 	))
