--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<!-- Decap CMS script -->
-		<script is:inline src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
+		<script
+			is:inline
+			src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
 
 		<!-- Decap CMS preview pane script -->
 		<!-- Edit this script to customize the preview pane for your blog posts.  -->
@@ -21,7 +23,10 @@
 					const data = this.props.entry.get("data").toJS();
 					const title = data.title;
 					const author = data.author;
-					const date = typeof data.date === "string" ? new Date(data.date) : data.date;
+					const date =
+						typeof data.date === "string"
+							? new Date(data.date)
+							: data.date;
 					let formattedDate = "";
 					if (date) {
 						formattedDate = Intl.DateTimeFormat("en-US", {
@@ -38,10 +43,20 @@
 						"div",
 						{ className: "blog" },
 						h("h1", { className: "title" }, title),
-						h("div", { className: "metadata" }, h("span", { className: "author" }, author), h("span", { className: "dot" }), h("span", { className: "date" }, formattedDate)),
+						h(
+							"div",
+							{ className: "metadata" },
+							h("span", { className: "author" }, author),
+							h("span", { className: "dot" }),
+							h("span", { className: "date" }, formattedDate),
+						),
 						h("img", { src: cover.toString(), className: "cover" }),
 						h("hr", { className: "divider" }),
-						h("div", { className: "markdown" }, this.props.widgetFor("body"))
+						h(
+							"div",
+							{ className: "markdown" },
+							this.props.widgetFor("body"),
+						),
 					);
 				},
 			});
