--- a/src/pages/blog/[...post].astro
+++ b/src/pages/blog/[...post].astro
@@ -1,11 +1,11 @@
 ---
 /**
  * * This page generates the individual blog posts
-**/
+ **/
 
 import { getCollection, render } from "astro:content";
 import BlogPostLayout from "@layouts/BlogPostLayout.astro";
-import CTA from "@components/CTA.astro";
+// import CTA from "@components/CTA.astro";
 
 // Generates the individual blog pages based on the blog collection
 export async function getStaticPaths() {
