--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,15 +4,15 @@ import CTA from "@components/CTA.astro";
 import FAQ from "@components/FAQ.astro";
 
 // Optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
-import landingImage from "@assets/images/landing.jpg" // <-- THE PATH TO THE ASSET YOU WANT TO PRELOAD - The asset must live in src
+import landingImage from "@assets/images/landing.jpg"; // <-- THE PATH TO THE ASSET YOU WANT TO PRELOAD - The asset must live in src
 import { getImage } from "astro:assets";
-const optimizedImage = await getImage({src: landingImage, format: 'avif'})
+const optimizedImage = await getImage({ src: landingImage, format: "avif" });
 ---
 
 <BaseLayout
   title="Pixel Perfect Websites"
   description="Meta description for the page"
-  preloadedImage = {optimizedImage}
+  preloadedImage={optimizedImage}
 >
   <!-- ============================================ -->
   <!--                    Hero                      -->
@@ -22,10 +22,12 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
     <div class="cs-container">
       <div class="cs-flex-group">
         <span class="cs-topper">Intermediate Kit</span>
-        <h1 class="cs-title">Intermediate Astro v4 <br/> Decap CMS</h1>
+        <h1 class="cs-title">Intermediate Astro v4 <br /> Decap CMS</h1>
         <p class="cs-text">
-          This intermediate kit includes a pre-configured Astro environment, which
-allows for repeated components, centralized data and greater room to scale as your clients grow. Decap CMS has been integrated to run a blog.
+          This intermediate kit includes a pre-configured Astro environment,
+          which allows for repeated components, centralized data and greater
+          room to scale as your clients grow. Decap CMS has been integrated to
+          run a blog.
         </p>
         <a href="/about" class="cs-button-solid">Explore More</a>
         <a href="/contact" class="cs-button-transparent">
@@ -46,10 +48,7 @@ allows for repeated components, centralized data and greater room to scale as yo
     <!-- Background Image -->
     <!-- We can't use Astro <Picture /> as it does not support multiple sources -->
     <picture class="cs-picture">
-      <source
-        media="(max-width: 600px)"
-        srcset="/assets/images/hero-m.webp"
-      />
+      <source media="(max-width: 600px)" srcset="/assets/images/hero-m.webp" />
       <source media="(min-width: 601px)" srcset="/assets/images/hero.jpg" />
       <img
         aria-hidden="true"
@@ -61,7 +60,6 @@ allows for repeated components, centralized data and greater room to scale as yo
         loading="eager"
       />
     </picture>
-
   </section>
 
   <!-- ============================================ -->
@@ -476,11 +474,11 @@ allows for repeated components, centralized data and greater room to scale as yo
     </div>
   </section>
 
-    <!-- ============================================ -->
+  <!-- ============================================ -->
   <!--                    FAQ                       -->
   <!-- ============================================ -->
   <FAQ />
-  
+
   <!-- ============================================ -->
   <!--                   Reviews                    -->
   <!-- ============================================ -->
